@@ -1,12 +1,0 @@
-/*
- * Copyright (c) 2002, 2010 EmuTOS development team
- *
- * This file is distributed under the GPL, version 2 or at your
- * option any later version.  See doc/license.txt for details.
- */
-
-#define LASTICON    18      /* last entry in icon_rs_fstr[] */
-
-extern const ICONBLK icon_rs_iconblk[NUM_IBLKS];
-
-extern const BYTE * const icon_rs_fstr[];
