@@ -3929,3 +3929,4 @@ Start... early ages
 - tools/erd.c: Fix bug in code generated by icon resource decompilation. (RFB)
 - Makefile .cvsignore desk/.cvsignore: Add support for building icons.*
   from icon resource. (RFB)
+- desk/icons.c desk/icons.h: Removed from CVS, now generated by ird. (RFB)
